--- a/css/style.css
+++ b/css/style.css
@@ -42,10 +42,10 @@
 }
 html {
     background: #000000;
-    background: url("/img/NUMEROS.png") no-repeat, -moz-linear-gradient(0deg, rgba(0,0,0,1) 25%, rgba(75,22,22,1) 100%);
-    background: url("/img/NUMEROS.png") no-repeat, -webkit-linear-gradient(0deg, rgba(0,0,0,1) 25%, rgba(75,22,22,1) 100%);
-    background: url("/img/NUMEROS.png") no-repeat, linear-gradient(0deg, rgba(0,0,0,1) 50%, rgb(75, 22, 22) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#4b1616",GradientType=1);
+    background: url("/img/NUMEROS.png") no-repeat, -moz-linear-gradient(0deg, rgba(0,0,0,1) 25%, rgba(75,22,22,1) 100%) no-repeat, #000;
+    background: url("/img/NUMEROS.png") no-repeat, -webkit-linear-gradient(0deg, rgba(0,0,0,1) 25%, rgba(75,22,22,1) 100%) no-repeat, #000;
+    background: url("/img/NUMEROS.png") no-repeat, linear-gradient(0deg, rgba(0,0,0,1) 50%, rgb(75, 22, 22) 100%) no-repeat, #000;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#4b1616",GradientType=1) no-repeat, #000;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -143,4 +143,17 @@ small {
 }
 a {
     text-decoration: none;
+}
+
+@media (max-width: 800px) {
+    header img{
+        width: 80%;
+    }
+    .text p {
+        width: 100%;
+    }
+    .soon p {
+        font-size: 50px;
+        padding: 10px;
+    }
 }
